--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   lottie: ^2.3.2
   shared_preferences: ^2.1.2
   flutter_cache_manager: ^3.3.0
+  webview_cookie_manager: ^2.0.6
+  quick_actions: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
